Suppressing java native load warning in example app, and updating readmes with an explination